# HRMS

./: LICENSE  README.md  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css
client/src/components/dashboard/: StatCard.tsx
client/src/components/layout/: SidebarLayout.tsx
client/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  chart.tsx  form.tsx  input.tsx  menubar.tsx  select.tsx  sidebar.tsx  toast.tsx
client/src/hooks/: use-attendance.ts  use-employees.ts
client/src/pages/: Attendance.tsx  Dashboard.tsx  Employees.tsx  not-found.tsx
server/: database.py  main.py  models.py  requirements.txt  schemas.py
shared/: routes.ts  schema.ts
